# device-trust-mcp-server

./: .env.example  .gitignore  README.md  hatch_build.py  openapi2023-05-26.json  pyproject.toml
.claude-code.example/: .mcp.json
.claude.example/: claude_desktop_config.json
.cursor.example/: mcp.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  openapi-spec-drift.yml
.vscode.example/: mcp.json
openapi/: openapi2023-05-26.json  openapi2026-04-07.json
scripts/: sync_openapi_specs.py
src/kolide_mcp/: __init__.py  api_version.py  client.py  composite_tools.py  config.py  endpoints.py  logging_config.py  resources.py  server.py
tests/: test_openapi_drift.py  test_smoke.py  test_user_agent.py
