[project]
name = "kolide-mcp"
version = "0.1.0"
description = "MCP server for 1Password Device Trust (Kolide K2) API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.scripts]
kolide-mcp = "kolide_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kolide_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/kolide_mcp"]
